PSP/borradores/ae/jwt/TVREST-AdrianSaavedra/src/main/java/org/example/tvrestadriansaavedra/common/errors/ChapterNotFoundException.java
package org.example.tvrestadriansaavedra.common.errors;

public class ChapterNotFoundException extends RuntimeException {
    public ChapterNotFoundException(String message) {
        super(message);
    }
}

